Fix spacing between header area and content

--- a/layouts/content-sidebar.css
+++ b/layouts/content-sidebar.css
@@ -5,7 +5,8 @@ Layout: Sidebar right
 
 .site-content {
 	max-width: 880px;
-    // padding: 2rem;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
     margin: auto;
 }
 
@@ -109,6 +110,7 @@ Layout: Sidebar right
 	.site-content {
 		margin: auto;
 		max-width: 1280px;
+		padding-top: 2em;
 		padding-bottom: 2em;	
 	}
     .content-area {
