--- a/layouts/no-sidebar.css
+++ b/layouts/no-sidebar.css
@@ -4,6 +4,7 @@ Layout: No sidebar
 */
 
 .site-content {
+	padding-top: 2em;
     padding-bottom: 4em;
     max-width: 880px;
     max-width: 88rem;
